# rs-paper

./: Cargo.toml  README.md  imgui.ini  logbook.md
.github/workflows/: rust.yml
src/: main.rs
src/gui/: app.rs  mod.rs  window.rs
src/gui/support/: mod.rs
src/wallpaper/: wallpaper.rs
