[package]
name = "rs-paper"
version = "0.1.0"
edition = "2024"
description = "Rs-Paper"
homepage = "https://github.com/Res-NeoTech/rs-paper"
repository = "https://github.com/Res-NeoTech/rs-paper"
license = "Palms"
publish = false

[dependencies]
copypasta = "0.8"
glium = "0.35"
glutin = "0.32"
glutin-winit = "0.5"
image = "0.24"
imgui-glium-renderer = "0.13"
imgui = { version = "0.12", features = ["tables-api"] }
imgui-winit-support = "0.13"
raw-window-handle = "0.6"
winit = "0.30"
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
