[package]
name = "rs-paper"
version = "0.1.0"
edition = "2024"
description = "RsPaper"
homepage = "https://github.com/Res-NeoTech/rs-paper"
repository = "https://github.com/Res-NeoTech/rs-paper"
license = "Palms"
publish = false

[dev-dependencies]
copypasta = "0.8"
glium = { version = "0.35.0", default-features = true }
image = "0.23"

imgui-glium-renderer = { version = "0.13.0", git = "https://github.com/imgui-rs/imgui-glium-renderer" }
imgui = { git = "https://github.com/imgui-rs/imgui-rs", version = "0.12", features = [
    "tables-api",
] }
imgui-winit-support = { version = "0.13", git = "https://github.com/imgui-rs/imgui-winit-support" }
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }