[package]
name = "rs-paper"
version = "0.1.0"
edition = "2024"
description = "RsPaper"
homepage = "https://github.com/Res-NeoTech/rs-paper"
repository = "https://github.com/Res-NeoTech/rs-paper"
license = "Palms"
publish = false

[dependencies]
iced = "0.14.0"
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
